# percona-backup-mongodb

./: .cirrus.yml  .dockerignore  .editorconfig  .env  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  Gopkg.toml  Jenkinsfile  Makefile  README.md  SECURITY.md  docker-compose.yml  go.mod  go.sum  setenv.sh
agent/: agent.go  backup.go  fail_test.go  oplog.go  oplog_test.go  pitr.go  restore.go  snapshot.go
backup/: backup.go  dst.go  oplog.go
bsonfile/: bsonfile.go
cli/: backup.go  backup_test.go  cli.go  config.go  delete.go  list.go  list_test.go  misc.go  ns.go  oplog.go  restore.go  status.go  util.go  util_test.go
client/: backup.go  client.go  config.go  restore.go  status.go  util.go
doc/: .gitignore  Makefile  netlify.toml  requirements.txt
docker/: Dockerfile  Dockerfile.common  Dockerfile.coordinator  Dockerfile.k8s  Dockerfile.release  Dockerfile.test  start-agent.sh
e2e-tests/: Dockerfile  README.md  functions  run-all  run-consistency  run-new-cluster  run-remapping  run-rs  run-sharded  run-single  run.sh  spinup.sh  start-cluster  start-replset
grpc/: generate.sh
internal/: cleanup.go
mdbstructs/: cluster_time.go  common.go  is_master.go  list_shards.go  oplog.go  replset_config.go  replset_status.go  sharding.go
mocks/: generate.sh
patch/: 00-s3-retry-read-reset-connection.patch
pbm/: agent_status.go  bcp_nodes_priority.go  bsontypes.go  cleanup.go  cmd.go  conf.go  config.go  delete.go  lock.go  log.go  node.go  pbm.go  pitr.go  pitr_test.go  restore.go  rs_map.go  rsync.go  (+5 more)
wtc/: .gitignore  CMakeLists.txt
wtc/src/: copy_file.c  main.c  wtl.c  wtl.h
(+754 files in other folders)
